[package]
name = "qrup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.29", features = ["multipart"]  }
poem-openapi = { version = "1.3.29", features = ["swagger-ui"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "signal"] }
local-ip-address = "0.4.4"
qrcode = "0.12.0"
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }
